--- a/package.json
+++ b/package.json
@@ -4,51 +4,28 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@chakra-ui/react": "^1.3.3",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@mtsmfm/react-masonry": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.20",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "browser-image-compression": "^1.0.14",
-    "camelcase-keys": "^6.2.2",
     "firebase": "^8.2.9",
-    "framer-motion": "^3.3.0",
     "history": "^5.0.0",
-    "node-sass": "^5.0.0",
-    "react": "^0.0.0-experimental-6f8843837",
-    "react-dom": "^0.0.0-experimental-6f8843837",
+    "react": "^0.0.0-experimental-0cf9fc10b",
+    "react-dom": "^0.0.0-experimental-0cf9fc10b",
     "react-error-boundary": "^3.1.0",
     "react-firebase-hooks": "^2.2.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.3",
-    "react-image-masonry": "^0.4.0",
-    "react-images-upload": "^1.2.8",
-    "react-movable-resizable": "^1.0.44",
-    "react-moveable": "^0.26.2",
-    "react-query": "^3.8.2",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.2",
-    "react-slick": "^0.28.0",
-    "react-suspense-img": "^0.2.0",
-    "react-swipe": "^6.0.4",
-    "react-swipeable": "^6.0.1",
-    "react-swipeable-views": "^0.13.9",
-    "react-swipeable-views-core": "^0.14.0-alpha.0",
-    "react-swipeable-views-utils": "^0.14.0-alpha.0",
-    "scenejs": "^1.5.0",
     "shortid": "^2.2.16",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^6.4.14",
     "typescript": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
@@ -57,6 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "test:firebase": "jest",
     "fix": "npm run -s format && npm run -s lint:fix",
     "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,gql,graphql,json}'",
     "lint": "npm run -s lint:style; npm run -s lint:es",
@@ -87,30 +65,28 @@
     ]
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.1",
+    "@firebase/testing": "^0.20.11",
     "@types/prettier": "^2.2.0",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-slick": "^0.23.4",
-    "@types/react-swipe": "^6.0.0",
-    "@types/react-swipeable-views": "^0.13.0",
-    "@types/react-swipeable-views-utils": "^0.13.2",
     "@types/shortid": "^0.0.29",
-    "@types/slick-carousel": "^1.6.34",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "firebase-tools": "^9.5.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "ts-jest": "^26.5.2"
   },
   "husky": {
     "hooks": {
