--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,7 +4,8 @@
         "src/**/*.js",
         "src/**/*.jsx",
         "src/**/*.ts",
-        "src/**/*.tsx"
+        "src/**/*.tsx",
+        "__test__/**/*.ts",
     ],
     "exclude": [
         "node_modules"
